# varTrack

./: .env.example  .gitignore  404.html  README.md  buf.gen.watcher.yaml  buf.gen.yaml  buf.yaml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: Makefile  README.md  go.mod  index.html
cli/cicd/: index.html
cli/cmd/: main.go
concepts/: index.html
concepts/destination-template/: index.html
concepts/drift-detection/: index.html
concepts/environment-resolution/: index.html
concepts/sync-strategies/: index.html
configuration/annotations/: index.html
configuration/auth/: index.html
configuration/bundle/: index.html
configuration/formats/: index.html
docs/: getting-started.md  index.md  requirements.txt  why-vartrack.md
e2e/: config.cue  docker-compose.dev.yml  docker-compose.yml  prometheus.yml  run.sh
examples/: README.md  index.html
gateway-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.cue  go.mod  go.sum
getting-started/: index.html
orchestrator-service/: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
orchestrator-service/app/: config.py  tls.py
orchestrator-service/app/admin/: server.py
orchestrator-service/app/api/: app.py
orchestrator-service/app/api/middlewares/: correlation.py  request_id.py  security_headers.py
orchestrator-service/app/api/routers/: cli.py  dry_run.py  schemas.py  tasks.py  webhooks.py
orchestrator-service/app/celery_app/: __init__.py  celery.py
orchestrator-service/app/grpc_server/: __init__.py  server.py
orchestrator-service/app/monitoring/: __init__.py  _utils.py  backends.py  base.py  celery_signals.py  config.py  elk.py  instrument.py  jaeger.py  logger.py  metrics.py  otel.py  outcomes.py  prometheus.py  tracer.py
orchestrator-service/app/parsers/: detector.py  hcl_parser.py  ini_parser.py  json_parser.py  kv_parser.py  loader.py  toml_parser.py  xml_parser.py  yaml_parser.py
orchestrator-service/app/pipeline/: change_logger.py  env_resolver.py  env_slice.py  git_extractor.py  models.py  pr_branch_cache.py  repo_overrides.py  schema_utils.py  secret_resolver.py  stage_etl.py  stage_payload.py  stage_sync.py  transformer.py  validator.py
orchestrator-service/app/pipeline/sinks/: __init__.py  base.py  configmap.py  helm.py  key_formatter.py  labels.py  linux_server.py  mongo.py  redis.py  s3.py  vercel.py  zookeeper.py
orchestrator-service/app/pipeline/sinks/strategies/helm/: __init__.py  base.py  upgrade.py  values_file.py
orchestrator-service/app/pipeline/sinks/strategies/mongo/: __init__.py  base.py  document.py  file.py
orchestrator-service/app/schema_registry/: manager.py
orchestrator-service/app/tasks/: etl.py  file_collector.py  payload.py  result.py
orchestrator-service/app/utils/: circuit_breaker.py  class_loader.py  factory.py  redis_cache.py  secret_masker.py  vault_client.py
orchestrator-service/app/utils/cue/: __init__.py
orchestrator-service/app/utils/enums/: apply_strategy.py  file_status.py  sync_mode.py  task_state.py
orchestrator-service/app/utils/git/: repo_cache.py
orchestrator-service/app/worker/: celery.py
orchestrator-service/docker/: Dockerfile
orchestrator-service/rust_core/: Cargo.toml
orchestrator-service/rust_core/src/: cue.rs  diff.rs  flatten.rs  lib.rs  merge.rs  prune.rs  sync.rs
orchestrator-service/tests/: conftest.py
orchestrator-service/tests/integration/: test_webhook_e2e.py
orchestrator-service/tests/unit/: test_app.py  test_config.py  test_dry_run_router.py  test_env_slice.py  test_git_extractor.py  test_models.py  test_parsers.py  test_secret_resolver.py  test_sink_factory.py  test_stage_etl.py  test_stage_sync.py  test_strategy_selector.py  test_transformer.py  test_validator.py  test_webhooks_router.py
search/: search_index.json
sinks/: index.html
watcher-service/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum
why-vartrack/: index.html
(+260 files in other folders)
