[package]
name = "vartrack-core"
version = "0.1.0"
edition = "2021"
description = "High-performance ETL core: flattening, merging, pruning for VarTrack"
license = "Apache-2.0"

[lib]
name = "vartrack_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency / data structures
dashmap = "5"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1"

# Error handling
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = []
extension-module = ["pyo3/extension-module"]
